Closed Bug 1606804 Opened 4 years ago Closed 4 years ago

ThreadSanitizer: lock-order-inversion (potential deadlock) [@ pthread_rwlock_wrlock] in RKV

Categories

(Core :: Security: PSM, defect, P3)

x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
83 Branch
Tracking Status
firefox73 --- wontfix
firefox83 --- fixed

People

(Reporter: decoder, Assigned: decoder)

References

(Blocks 2 open bugs)

Details

Attachments

(2 files)

The attached crash information was detected while running CI tests with ThreadSanitizer on mozilla-central revision d1ac49b9eb3e.

Filing this so :vporof can take a look. This is a report from Rust code and TSan currently does not instrument the Rust std library. That means any atomics or locking mechanisms in the Rust std library that do not result in an intercepted call are not visible to TSan and can cause false positives. However, since this is a lock inversion report about intercepted locks, this report might still be legit.

This particular race is for example visible when running the xpcshell test at security/manager/ssl/tests/unit/test_cert_storage_broken_db.js.

General information about TSan reports

Why fix races?

Data races are undefined behavior and can cause crashes as well as correctness issues. Compiler optimizations can cause racy code to have unpredictable and hard-to-reproduce behavior.

Rating

If you think this race can cause crashes or correctness issues, it would be great to rate the bug appropriately as P1/P2 and/or indicating this in the bug. This makes it a lot easier for us to assess the actual impact that these reports make and if they are helpful to you.

False Positives / Benign Races

Typically, races reported by TSan are not false positives [1], but it is possible that the race is benign. Even in this case it would be nice to come up with a fix if it is easily doable and does not regress performance. Every race that we cannot fix will have to remain on the suppression list and slows down the overall TSan performance. Also note that seemingly benign races can possibly be harmful (also depending on the compiler, optimizations and the architecture) [2][3].

[1] One major exception is the involvement of uninstrumented code from third-party libraries.
[2] http://software.intel.com/en-us/blogs/2013/01/06/benign-data-races-what-could-possibly-go-wrong
[3] How to miscompile programs with "benign" data races: https://www.usenix.org/legacy/events/hotpar11/tech/final_files/Boehm.pdf

Suppressing unfixable races

If the bug cannot be fixed, then a runtime suppression needs to be added in mozglue/build/TsanOptions.cpp. The suppressions match on the full stack, so it should be picked such that it is unique to this particular race. The bug number of this bug should also be included so we have some documentation on why this suppression was added.

The priority flag is not set for this bug.
:keeler, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(dkeeler)
Assignee: nobody → vporof
Status: NEW → ASSIGNED
Priority: -- → P3
Blocks: ship-rkv
No longer blocks: rkv-perf-mode
Blocks: rkv-fuzzing
No longer blocks: ship-rkv

While revisiting this I noticed that the reported lock-order-inversion is on the same thread and this is likely a false positive. I'm going to make a suppression for this.

Assignee: vporof → nobody
Status: ASSIGNED → NEW
Assignee: nobody → choller
Status: NEW → ASSIGNED
Pushed by choller@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1972efb3bea0
Permanently suppress false positive deadlock in rkv. r=Gankro
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: