Bug 1606804 - Permanently suppress false positive deadlock in rkv. r=Gankro

Differential Revision: https://phabricator.services.mozilla.com/D93500